--- a/src/CoffeeShop/components/Header/Header.scss
+++ b/src/CoffeeShop/components/Header/Header.scss
@@ -1,4 +1,5 @@
 @import "../../../sass/variables";
+@import "../../../sass/typography";
 
 $color-primary : #55c57a;
 $color-primary-light: #7ed56f;
@@ -59,61 +60,6 @@ $gutter-horizontal: 6rem;
 
   }
 
-  .heading-primary{
-      color: #fff;
-      text-transform: uppercase;
-      backface-visibility: hidden;
-  }
+  
 
-  .heading-primary--main{
-      display: block;
-      font-size: 4rem;
-      font-weight: 400;
-      letter-spacing: 3.5rem;
-
-      animation-name: moveInLeft;
-      animation-duration: 1s;
-  }
-
-  .heading-primary--sub{
-      display: block;
-      font-size: 1.5rem;
-      font-weight: 700;
-      letter-spacing: 17.4px;
-      animation-name: moveInRight;
-      animation-duration: 1s;
-  }
-
-  @keyframes moveInLeft{
-    0% {
-      opacity: 0;
-      transform: translateX(-100px);
-    }
-
-    80% {
-      transform: translateX(20px);
-    }
-
-    100% {
-      opacity: 1;
-      transform: translate(0);
-    }
-  }
-
-
-  @keyframes moveInRight{
-    0%{
-      opacity: 0;
-      transform: translateX(100px);
-    }
-
-    80% {
-      transform: translateX(-20px);
-    }
-
-    100% {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
-
+  
