--- a/src/CoffeeShop/components/ShoppingItem/ShoppingItem.scss
+++ b/src/CoffeeShop/components/ShoppingItem/ShoppingItem.scss
@@ -1,52 +1,73 @@
+@import "../../../sass/variables";
+@import "../../../sass/typography";
+
+
+.row{
+    flex-basis: 30%;
+    //justify-content: space-evenly;
+    border: 1px
+}
+
 .Item{
-    border: 1px solid #e7c1b3;
+    border: 1px solid $color-sand-1;
     border-radius: 8px;
+    width: 30rem;
+    height: 26rem;
     display: inline-block;
     padding: 15px;
     margin: 10px;
-    background: #374f2f; 
+    background: $color-green-very-light; 
+    
+
+    &__logo{
+        background-color: white;
+        padding: 8px;
+        height: 6.25rem;
+        text-align: center;
+    }
+
+    &__logo img{
+        height: 100%
+    }
+
+    &__itemDescription{
+        //width: 14rem;
+        font-size: $default-font-size-3;
+        color: $color-sand-2;
+        text-align: justify;
+        margin-bottom: 4px;
+    }
+
+    &__priceCount{
+        text-align: center;
+    }
 }
 
-.ItemName{
-    font-size: 1.2rem;
-    color: 	#decbbc;
-    margin: center;
-    text-align: center;
-}
 
-.ItemPrice{
-    color: 	#decbbc;
-    display: inline;
-    padding: 0.8rem;
-    margin-left: 1.4rem;
-}
+// .ItemName{
+//     font-size: 1.2rem;
+//     color: 	$color-green-dark;
+//     margin: center;
+//     text-align: center;
+// }
 
-.ItemDescription{
-    width: 14rem;
-    font-size: 0.9rem;
-    color: #c98d57;
-    text-align: center;
-    margin-bottom: 4px;
-}
+// .ItemPrice{
+//     color: $color-green-dark;
+//     display: inline;
+//     padding: 0.8rem;
+//     margin-left: 1.4rem;
+// }
+
+
 
 .Buttons{
-    display: block;
+  //  display: block;
     margin-top: 4px;
     text-align: center;
 }
 
 
 
-.Logo{
-    background-color: white;
-    padding: 8px;
-    height: 6.25rem;
-    text-align: center;
-}
-
-.Logo img{
-    height: 100%
-}
 
 @media(max-width: 1200px){
     .Item{
