--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,6 +2,10 @@ $color-brown-light: #DDA35D;
 $color-brown-medium: #AA6231;
 $color-brown-dark: #5C2C0C ;
 
+$color-sand-1: #e7c1b3;
+$color-sand-2: #c98d57;
+$color-sand-3:#decbbc;
+
 $color-green-very-light: #E3DECA;
 $color-green-dark: #3C3A1E;
 
@@ -18,7 +22,11 @@ $color-black: #000;
 
 //FONT
 $default-font-size: 1.6rem ;
+$default-font-size-2: 1.4rem ;
+$default-font-size-3: 1.2rem ;
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+
