--- a/src/CoffeeShop/containers/CoffeeShop/CoffeeShop.scss
+++ b/src/CoffeeShop/containers/CoffeeShop/CoffeeShop.scss
@@ -1,6 +1,10 @@
 @import "../../../sass/typography";
 @import "../../../sass/variables";
 
+.coffeeShop{
+    top: 100px;
+}
+
 .shoppingItems{
      margin-top: 50px;
 
