--- a/src/CoffeeShop/components/ShoppingNavBar/ShoppingNavBar.module.css
+++ b/src/CoffeeShop/components/ShoppingNavBar/ShoppingNavBar.module.css
@@ -2,18 +2,29 @@
     position: fixed;
     width: 100%;
     height: 50px;
+    margin-right: 0px;
     top: 0px;
-    color: red;
-    background: #c98d57;
+  
+    background: #fff;
+    box-sizing: border-box;
+
 }
 
 .CartButton{
     display: inline;
-    margin-left: 90%;
+    margin-left: 70%;
+    position: fixed;
+    vertical-align: auto;
+    
 }
 
 .Cart{
     color: #374f2f;
+    font-size: 70%;
+    height: 3rem;
+    width: 3rem;
+    size: medium;
+    
 }
 
 @media(max-width: 960px){
