--- a/src/index.scss
+++ b/src/index.scss
@@ -10,8 +10,9 @@ font-size: 62.5%;
 }
 
 body {
-  padding: 30px;
-  
+ padding: 30px;
+ margin-top: 50px;
+ // border: 10px solid orchid;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
