--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,8 @@ font-size: 62.5%;
 
 body {
  padding: 30px;
- margin-top: 50px;
+ position: absolute;
+ top: 4rem;
  // border: 10px solid orchid;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
