--- a/src/index.scss
+++ b/src/index.scss
@@ -34,3 +34,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media(max-width: 600px){
+    body{
+      padding: 0;
+    }
+  }
+
+
