--- a/src/CoffeeShop/components/Header/Header.scss
+++ b/src/CoffeeShop/components/Header/Header.scss
@@ -1,32 +1,6 @@
 @import "../../../sass/variables";
 @import "../../../sass/typography";
 
-$color-primary : #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-
-$color-secondary-light: #ffb900;
-$color-secondary-dark: #ff7730;
-
-$color-tertiary-light: #2998ff;
-$color-tertiary-dark: #5643fa;
-
-$color-grey-light-1: #f7f7f7;
-$color-grey-light-2: #eee;
-
-$color-grey-dark: #777;
-$color-grey-dark-2: #999;
-$color-grey-dark-3: #333;
-
-$color-white: #fff;
-$color-black: #000;
-
-//FONT
-$default-font-size: 1.6rem ;
-
-$grid-width: 114rem;
-$gutter-vertical: 8rem;
-$gutter-horizontal: 6rem;
 
 .header {
     height: 90vh;
@@ -37,18 +11,17 @@ $gutter-horizontal: 6rem;
     rgba($color-brown-dark, 0.6)), 
     url(../../assets/img/coffee-beans-header.jpg);
     background-size: cover;
-    //background-position: top ;
     position: relative;
-  //  clip-path: polygon(0 0, 100% 0, 100% 500px, 0% 100%); 
+ 
   
     &__logo-box {
       position: absolute;
       top: 4rem;
-      left: 40px; 
+      left: 4rem; 
     }
 
     &__logo {
-      height: 3.5rem; 
+      height: 5rem; 
     }
     
     &__text-box {
