--- a/src/CoffeeShop/components/ShoppingItem/ShoppingItem.scss
+++ b/src/CoffeeShop/components/ShoppingItem/ShoppingItem.scss
@@ -5,29 +5,39 @@
 .row{
     flex-basis: 30%;
     //justify-content: space-evenly;
-    border: 1px
+    //border: 1px
+    margin-bottom: 2rem;
 }
 
 .Item{
-    border: 1px solid $color-sand-1;
+   // border: 1px solid $color-sand-1;
     border-radius: 8px;
     width: 30rem;
-    height: 26rem;
+    height: 35rem;
     display: inline-block;
-    padding: 15px;
-    margin: 10px;
-    background: $color-green-very-light; 
+    padding: 1.5rem;
+    margin:  1rem ;
+   // background: $color-green-very-light; 
     
 
     &__logo{
         background-color: white;
-        padding: 8px;
-        height: 6.25rem;
-        text-align: center;
+      
+        //padding: 8px;
+        height: 20rem;
+        width: 20rem;
+        margin: 0 auto;
+        overflow: hidden;
+        border-radius: 4rem;
+       // text-align: center;
     }
 
     &__logo img{
-        height: 100%
+        height: 100%;
+       // border-radius: 4rem;
+       
+      //  width: 100%;  
+       // transform: scale(2);  
     }
 
     &__itemDescription{
@@ -42,22 +52,6 @@
         text-align: center;
     }
 }
-
-
-// .ItemName{
-//     font-size: 1.2rem;
-//     color: 	$color-green-dark;
-//     margin: center;
-//     text-align: center;
-// }
-
-// .ItemPrice{
-//     color: $color-green-dark;
-//     display: inline;
-//     padding: 0.8rem;
-//     margin-left: 1.4rem;
-// }
-
 
 
 .Buttons{
