--- a/src/CoffeeShop/containers/CoffeeShop/CoffeeShop.scss
+++ b/src/CoffeeShop/containers/CoffeeShop/CoffeeShop.scss
@@ -4,15 +4,19 @@
 
 
 .shoppingItems{
-     margin-top: 50px;
+     margin-top: 5rem;
+    
 
     &__allItems{
-        background-color:  $color-sand-3;
+        background-image: linear-gradient(to right bottom, 
+        rgba($color-brown-medium, 0.05), 
+        rgba($color-brown-dark, 0.1));
         display: flex;
         flex-wrap: wrap;
         height: 100%;
         width: 100%;
         justify-content: center;
+        border-radius: 4rem;
     
     }
 }
