coffee spices and cacao butter images centered

--- a/src/sass/_utilities.scss
+++ b/src/sass/_utilities.scss
@@ -1,3 +1,6 @@
+.u-margin-left-small{ margin-left: -9.2rem }
+.u-margin-top-small{margin-top: -1rem }
+
 .u-center-text{ text-align: center !important }
 
 .u-margin-bottom-small{margin-bottom: 2rem !important }
