--- a/src/CoffeeShop/components/ShoppingItem/ShoppingItem.scss
+++ b/src/CoffeeShop/components/ShoppingItem/ShoppingItem.scss
@@ -4,7 +4,7 @@
 
 .row{
     flex-basis: 30%;
-    margin-bottom: 2rem;
+    padding-bottom: 4rem;
 
 
  &__Item{
@@ -14,6 +14,7 @@
   //  display: inline-block;
     padding: 1.5rem;
     margin:  1rem ;
+
 
     &__logo{
         background-color: white;
@@ -39,6 +40,7 @@
         text-align: center;
     }
   }
+
 }
 
 
