Todays Special offer section added

--- a/src/sass/_utilities.scss
+++ b/src/sass/_utilities.scss
@@ -1,4 +1,7 @@
-.u-margin-left-small{ margin-left: -9.2rem }
+.u-margin-left-1{ margin-left: -9.2rem }
+.u-margin-left-2{ margin-left: -1rem }
+.u-margin-left-3{ margin-left: -5rem }
+.u-margin-left-4{margin-left: -0rem}
 .u-margin-top-small{margin-top: -1rem }
 
 // .u-center-text{ text-align: center !important }
