--- a/src/CoffeeShop/components/Footer/Footer.scss
+++ b/src/CoffeeShop/components/Footer/Footer.scss
@@ -27,7 +27,6 @@
             color: $color-brown-dark;
             font-weight: 700;
             width: 40%;
-           // border-radius: .2rem;
             cursor: pointer;
             background-color: $color-white;
             margin-bottom: 1rem;
@@ -92,3 +91,40 @@
 // @media(max-width: 750px){
     
 // } 
+
+
+@media(max-width: 420px){
+    .Footer{
+    &__info{
+        display: block;
+        // color: $color-white;
+        // border: 2px solid red;
+         width: 100%;
+    }
+
+    &__nav{
+        display: block;
+        border: 2px solid blue;
+        width: 100%;
+        //vertical-align: top;
+        margin: 0 auto;  
+        text-align: center;
+
+        & li{
+            display: inline;
+            padding: 0 .2rem 0 .2rem ;
+            font-size: $default-font-size-4;
+        }
+    }
+
+    &__summary{
+        width: 100%;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    &__contact{
+        text-align: center;
+    }
+ }
+} 
