--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -26,6 +26,7 @@ $color-black: #000;
 $default-font-size: 1.6rem ;
 $default-font-size-2: 1.4rem ;
 $default-font-size-3: 1.2rem ;
+$default-font-size-4: 1.1rem ;
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
