--- a/src/CoffeeShop/components/Footer/Footer.scss
+++ b/src/CoffeeShop/components/Footer/Footer.scss
@@ -9,18 +9,13 @@
     &__info{
         display: inline-block;
         color: $color-white;
-        border: 2px solid red;
         width: 70%;
     }
 
     &__nav{
         display: inline-block;
-        border: 2px solid blue;
         width: 30%;
         vertical-align: top;
-       // height: 100%;
-      //  position: relative;
-       // top: -30px;
         margin: 0 auto;
 
         & li{
@@ -54,7 +49,7 @@
 
 
     &__summary{
-        width: 40%;
+        width: 100%;
         margin-bottom: 2rem;
     }
 
@@ -64,67 +59,57 @@
 
     & ul{
         list-style: none;
-    }
-
-    
+    }   
 }
 
-// @media(max-width: 1200px){
-//    .Footer{
-//        &__info{
-//         display: block;
-//        }
-
-//        &__nav{
-//            display: block;
-//        }
-       
-//    }
-// } 
 
 
-// @media(max-width: 840px){
-
-// } 
-
-
-// @media(max-width: 750px){
-    
-// } 
-
-
-@media(max-width: 420px){
+@media(max-width: 960px){
     .Footer{
     &__info{
         display: block;
-        // color: $color-white;
-        // border: 2px solid red;
          width: 100%;
+         text-align: center;
     }
 
     &__nav{
-        display: block;
-        border: 2px solid blue;
         width: 100%;
-        //vertical-align: top;
+        height: 3rem;
         margin: 0 auto;  
         text-align: center;
 
         & li{
             display: inline;
+            padding: 0rem 1rem 0rem 1rem ;
+            font-size: $default-font-size;
+            border-radius: .1rem;
+        }
+    }
+ }
+} 
+
+@media(max-width: 500px){
+    .Footer{
+    &__nav{
+
+        & li{
+            padding: 0 .4rem 0 .4rem ;
+            font-size: $default-font-size-2;
+        }
+    }
+ }
+} 
+
+@media(max-width: 420px){
+    .Footer{
+
+    &__nav{
+
+        & li{
             padding: 0 .2rem 0 .2rem ;
             font-size: $default-font-size-4;
         }
     }
 
-    &__summary{
-        width: 100%;
-        text-align: center;
-        margin-bottom: 2rem;
-    }
-
-    &__contact{
-        text-align: center;
-    }
  }
 } 
