--- a/src/CoffeeShop/components/Footer/Footer.scss
+++ b/src/CoffeeShop/components/Footer/Footer.scss
@@ -2,10 +2,14 @@
 
 .Footer{
     font-size: $default-font-size-3;
-    background-color: $color-brown-dark;
+  //  background-color: $color-brown-dark;
+  background-image: linear-gradient(to right bottom, 
+        rgba($color-brown-medium, 0.8), 
+        rgba($color-brown-dark, 0.7));
     padding: 2.5rem;
     margin-top: 4rem;
-
+    border-radius: .6rem;
+ 
     &__info{
         display: inline-block;
         color: $color-white;
@@ -29,6 +33,7 @@
             margin: 0 auto 1.5rem auto;
             transition: transform .5s;
             text-decoration: none;
+            border-radius: .2rem;
 
             &:hover{
                 transform: scale(1.1);
