fetchItems, submitItems and fetchOrders error reducers and store state properties added, Error component added

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,6 +6,8 @@ $color-sand-1: #e7c1b3;
 $color-sand-2: #c98d57;
 $color-sand-3:#decbbc;
 
+$color-red-error: #830a0c;
+
 $color-green-medium: #374f2f; 
 
 $color-green-very-light: #E3DECA;
