about me component added with Route

--- a/src/CoffeeShop/components/Footer/Footer.scss
+++ b/src/CoffeeShop/components/Footer/Footer.scss
@@ -28,9 +28,8 @@
             width: 40%;
             cursor: pointer;
             background-color: $color-white;
-            margin-bottom: 1rem;
             text-align: center;
-            margin: 0 auto 1.5rem auto;
+            margin: 1.5rem .5rem 1.5rem auto;
             transition: transform .5s;
             text-decoration: none;
             border-radius: .2rem;
