--- a/src/AboutMe/AboutMe.scss
+++ b/src/AboutMe/AboutMe.scss
@@ -55,16 +55,18 @@
                 backface-visibility: hidden;
 
                 &-git{
-                    width: 20rem;
+                    width: 17rem;
                     border: 0;
                     height: 4rem;
                     font-size: 2rem;
-                    margin-left: 0rem;
+                    margin-left: .5rem;
+                    backface-visibility: hidden;
                 }
 
                 &-git:hover{
                     color: #63707e;
                     background-color: white;
+                    
                 }
             }
 
@@ -74,6 +76,15 @@
                 transform: scale(1.05);
    
             }
+
+            &-item{
+                &-git:hover{
+                   
+                    background-color: white;
+              
+                }
+            }
+        
         }
     }
 
@@ -176,7 +187,7 @@
                         margin: .4rem 1rem;
 
                         &-git{
-                            margin: 2rem 2rem 2rem 1rem;
+                         width: 12rem;
                         }
                     }
         
