covid styles modified

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ font-size: 62.5%;
 }
 
 body {
- padding: 30px;
+ padding: 15px 30px 30px 30px;
  position: absolute;
  top: 4rem;
  // border: 10px solid orchid;
