--- a/src/CoffeeShop/components/ShoppingSummary/ShoppingSummary.scss
+++ b/src/CoffeeShop/components/ShoppingSummary/ShoppingSummary.scss
@@ -31,7 +31,7 @@ cursor: pointer;
     font-size: 18px;
     font-weight: bold;
     color: $color-green-medium;
-    margin: 8px 8px 8px 40px;
+    margin: .8rem .8rem .8rem 4rem;
     
 }
 
@@ -39,7 +39,7 @@ cursor: pointer;
     font-size: 16px;
     font-weight: bold;
     color: $color-brown-dark;
-    margin: 8px 8px 8px 40px;
+    margin: .8rem .8rem .8rem 4rem;
 }
 
 .ItemsAmount{
