--- a/src/CoffeeShop/components/Error/Error.module.css
+++ b/src/CoffeeShop/components/Error/Error.module.css
@@ -1,7 +1,7 @@
 .errorIcon{
     transform: scale(1.2);
-    margin-left: 1rem;
-    margin-right: .5rem;
+    margin-left: .5rem;
+    margin-right: 1rem;
 }
 
 /* .errorIconHide{
