--- a/src/AboutMe/AboutMe.scss
+++ b/src/AboutMe/AboutMe.scss
@@ -1,207 +1,148 @@
-@import '../sass/variables';
+@import "../sass/variables";
 
-.aboutMe{
-  //  border: 1px solid red;
-    width: 94vw;
-   font-size: 1.5rem;
-   font-weight: 50;
-   font-family: "europa", sans-serif;
-   letter-spacing: 0.2rem; font-size: $default-font-size;
-    color: #63707e;
+.aboutMe {
+  width: 94vw;
+  letter-spacing: 0.2rem;
+  font-size: $default-font-size;
+  color: #63707e;
+  text-align: center;
 
-    h2 {
-        text-align: center;
+  h3 {
+    font-weight: 100;
+  }
+
+  &__github {
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+  }
+
+  &__buttons {
+    &-item {
+      display: inline-block;
+      cursor: pointer;
+      color: #63707e;
+      border: 0.1rem solid #63707e;
+      border-radius: 0.8rem;
+      font-size: 3rem;
+      width: 30rem;
+      height: 5rem;
+      margin: 2rem;
+      transition: transform 0.2s;
+      backface-visibility: hidden;
+
+      &-git {
+        width: 17rem;
+        border: 0;
+        height: 4rem;
+        font-size: 2rem;
+        margin-left: 0.5rem;
+        color: #63707e;
+        backface-visibility: hidden;
+      }
     }
 
-    h3{
-        text-align: center;
-        font-weight: 100;
+    &-item:hover {
+      color: $color-white;
+      background-color: #63707e;
+      transform: scale(1.05);
     }
 
+    &-item {
+      &-git:hover {
+        background-color: white;
+      }
+    }
+  }
 
-
-    &__github{
-        display: flex;
-        justify-content: center;
-    //    border: 1px solid seagreen;
-        margin: 1rem;
+  &__contact {
+    display: flex;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    justify-content: center;
+    &-logo {
+      width: 3rem;
     }
 
-
-    &__projects{
-        h2{
-            width: 100%;
-          //  height: 10rem;
-        //    border: 1px solid pink;
-            text-align: center;
-        }
-
-        &__buttons{
-            display: flex;
-            justify-content: center;
-
-            &-item{
-                display: inline-block;
-                cursor: pointer;
-                color: #63707e;
-                border: .1rem solid #63707e;
-                border-radius: .8rem;
-                font-size: 3rem;
-                width: 30rem;
-                height: 5rem;
-                text-align: center;
-                margin: 2rem;
-                transition: transform .2s;
-                backface-visibility: hidden;
-
-                &-git{
-                    width: 17rem;
-                    border: 0;
-                    height: 4rem;
-                    font-size: 2rem;
-                    margin-left: .5rem;
-                    color: #63707e;
-                    backface-visibility: hidden;
-                }
-
-            }
-
-            &-item:hover{
-                color: $color-white;
-                background-color:  #63707e;
-                transform: scale(1.05);
-   
-            }
-
-            &-item{
-                &-git:hover{
-                    background-color: white;
-              
-                }
-            }
-        
-        }
+    p {
+      margin-left: 1rem;
     }
+  }
 
+  &__logos {
+    height: 6rem;
+    display: flex;
+    justify-content: center;
 
-    &__contact{
-        display: flex;
-        margin-top: 1rem;
-        margin-bottom: 2rem;;
-        justify-content: center;
-        &-logo{
-            width: 3rem;
-        }
+    &-item {
+      width: 10rem;
+      margin: 1rem;
 
-        p{
-            margin-left: 1rem;
-        }
+      &-git {
+        width: 5rem;
+        margin: 0;
+      }
     }
-
-    
-    &__logos{
-        // width: 10rem;
-        height: 6rem;
-        display: flex;
-        justify-content: center;
-      //  border: 2px solid blue;
- 
-         &-item{
-           width: 10rem;
-           margin: 1rem;
-          
-           &-css{
-               width: 8rem;
-           }
- 
-           &-git{
-             width: 5rem;
-             margin: 0;
-         }
-         }
-     }
-
-    
+  }
 }
 
+@media (max-width: 800px) {
+  .aboutMe {
+    &__logos {
+      flex-wrap: wrap;
 
-@media(max-width: 800px){
-    .aboutMe{
-        &__logos{
-            flex-wrap: wrap;
-
-            &-item{
-                width: 5rem;
-                
-            }
-        }
-
-
-        &__github{
-            margin: 1rem;
-        }
-    
-
-            &__projects{
-        
-                &__buttons{
-                    flex-wrap: wrap;
-        
-                    &-item{
-                        font-size: 2rem;
-                        width: 20rem;
-                        height: 4rem;
-                    }
-        
-                }
-     }
+      &-item {
+        width: 5rem;
+      }
     }
 
-} 
-
-@media(max-width: 520px){
-    .aboutMe{
-
-        h2 {
-            line-height: 2.8rem;
-        }
-    
-        h3{
-            text-align: center;
-            font-weight: 100;
-        }
-
-
-        &__logos{
-            flex-wrap: wrap;
-
-            &-item{
-                width: 5rem;
-
-                &-git{
-                    width: 4rem;
-                }
-            }
-        }
-
-            &__projects{
-        
-                &__buttons{
-                    flex-wrap: wrap;
-        
-                    &-item{
-                        font-size: 2rem;
-                        width: 20rem;
-                        height: 4rem;
-                        margin: .4rem 1rem;
-
-                        &-git{
-                         width: 12rem;
-                        }
-                    }
-        
-                }
-     }
+    &__github {
+      margin: 1rem;
     }
 
-} 
+    &__buttons {
+      flex-wrap: wrap;
+
+      &-item {
+        font-size: 2rem;
+        width: 20rem;
+        height: 4rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 520px) {
+  .aboutMe {
+    h2 {
+      line-height: 2.8rem;
+    }
+
+    h3 {
+      text-align: center;
+      font-weight: 100;
+    }
+
+    &__logos {
+      flex-wrap: wrap;
+
+      &-item {
+        width: 5rem;
+
+        &-git {
+          width: 4rem;
+        }
+      }
+    }
+
+    &__buttons {
+      &-item {
+        margin: 0.4rem 1rem;
+
+        &-git {
+          width: 12rem;
+        }
+      }
+    }
+  }
+}
