--- a/src/CoffeeShop/components/Loader/Loader.scss
+++ b/src/CoffeeShop/components/Loader/Loader.scss
@@ -1,4 +1,3 @@
-
 .loaderCoffee,
 .loaderCoffee:before,
 .loaderCoffee:after {
@@ -11,7 +10,7 @@
   animation: load7 1.8s infinite ease-in-out;
 }
 .loaderCoffee {
-  color: #5C2C0C;
+  color: #5c2c0c;
   font-size: 10px;
   margin: 80px auto;
   position: relative;
@@ -24,7 +23,7 @@
 }
 .loaderCoffee:before,
 .loaderCoffee:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
 }
@@ -57,8 +56,8 @@
   }
 }
 
-.loaderSpinner{
+.loaderSpinner {
   position: fixed;
   left: 45vw;
-  top: 10vw; 
+  top: 10vw;
 }
