--- a/src/CoffeeShop/components/ShoppingItem/ShoppingItem.scss
+++ b/src/CoffeeShop/components/ShoppingItem/ShoppingItem.scss
@@ -1,52 +1,54 @@
 @import "../../../sass/variables";
 @import "../../../sass/typography";
 
+.row {
+  flex-basis: 30%;
+  padding-bottom: 4rem;
 
-.row{
-    flex-basis: 30%;
-    padding-bottom: 4rem;
-
-
- &__Item{
+  &__item {
     border-radius: 8px;
     width: 30rem;
     height: 35rem;
-  //  display: inline-block;
     padding: 1.5rem;
-    margin:  1rem ;
+    margin: 1rem;
 
+    &__buttons {
+      margin-top: 0.4rem;
+      text-align: center;
 
-    &__logo{
-        background-color: white;
-        height: 20rem;
-        width: 20rem;
-        margin: 0 auto;
-        overflow: hidden;
-        border-radius: 4rem;
+      &-addIcon {
+        color: #c98d57;
+        transform: scale(1.5);
+      }
+
+      &-removeIcon {
+        color: #333;
+        transform: scale(1.5);
+      }
     }
 
-    &__logo img{
-        height: 100%;
+    &__logo {
+      background-color: white;
+      height: 20rem;
+      width: 20rem;
+      margin: 0 auto;
+      overflow: hidden;
+      border-radius: 4rem;
     }
 
-    &__itemDescription{
-        font-size: $default-font-size-3;
-        color: $color-sand-2;
-        text-align: justify;
-        margin-bottom: 4px;
+    &__logo img {
+      height: 100%;
     }
 
-    &__priceCount{
-        text-align: center;
+    &__itemDescription {
+      font-size: $default-font-size-3;
+      color: $color-sand-2;
+      text-align: justify;
+      margin-bottom: 4px;
+    }
+
+    &__priceCount {
+      text-align: center;
     }
   }
-
 }
-
-
-.Buttons{
-    margin-top: .4rem;
-    text-align: center;
-}
-
-
