--- a/src/CoffeeShop/components/ShowOrders/ShowOrders.scss
+++ b/src/CoffeeShop/components/ShowOrders/ShowOrders.scss
@@ -1,70 +1,40 @@
-@import '../../../sass/variables';
+@import "../../../sass/variables";
 
+.allOrders {
+  font-size: $default-font-size;
+  font-weight: 500;
+  width: 80%;
+  margin: 0 auto;
+  border: 0.2rem solid $color-sand-1;
+  border-radius: 0.4rem;
 
+  &__individualOrder {
+    display: flex;
+    color: $color-brown-dark;
 
-.allOrders{
-    font-size: $default-font-size;
-    font-weight: 500;
-    width: 80%;
-    margin: 0 auto;
-    border: .2rem solid $color-sand-1;
-    border-radius: .4rem;
-
-    &__individualOrder{
-        display: flex;
-        color: $color-brown-dark;
-
-        &-items{
-            align-content: center;
-            width: 80%;
-            border: .2rem solid $color-sand-1;;
-         //   height: 100%;
-        }
-
-
-        &-price{
-            width: 20%;
-            border: .2rem solid $color-sand-1;
-            text-align: center;
-
-        }
+    &-items {
+      align-content: center;
+      width: 80%;
+      border: 0.2rem solid $color-sand-1;
     }
 
-}
-
-@media(max-width: 960px){
-    .allOrders{
-        font-size: $default-font-size-3;
+    &-price {
+      width: 20%;
+      border: 0.2rem solid $color-sand-1;
+      text-align: center;
     }
+  }
 }
 
-
-
-@media(max-width: 420px){
-    .allOrders{
-        text-align: center;
-        vertical-align: auto;
-    }
+@media (max-width: 960px) {
+  .allOrders {
+    font-size: $default-font-size-3;
+  }
 }
 
-
-// .order{
-//     text-align: center;
-//     padding-top: 10px;
-//     border: 3px solid red;
-// }
-
-// .orderItem{    
-//     display:inline-block;
-//     margin-right: 10px;
-//     padding: 5px;
-//     border: 1px solid #FCA843;
-//     border-radius: 4px;
-// }
-
-// .totalPrice{
-//     display: inline-block;
-//     padding: 5px;
-//     border: 1px solid #FCA843;
-//     border-radius: 4px;
-// }
+@media (max-width: 420px) {
+  .allOrders {
+    text-align: center;
+    vertical-align: auto;
+  }
+}
