--- a/src/CoffeeShop/containers/CoffeeShop/CoffeeShop.scss
+++ b/src/CoffeeShop/containers/CoffeeShop/CoffeeShop.scss
@@ -1,21 +1,18 @@
 @import "../../../sass/typography";
 @import "../../../sass/variables";
 
+.shoppingItems {
+  margin-top: 5rem;
 
-
-.shoppingItems{
-     margin-top: 5rem;
-    
-
-    &__allItems{
-        background-image: linear-gradient(to right bottom, 
-        rgba($color-brown-medium, 0.05), 
-        rgba($color-brown-dark, 0.05));
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        border-radius: 4rem;
-    
-    }
+  &__allItems {
+    background-image: linear-gradient(
+      to right bottom,
+      rgba($color-brown-medium, 0.05),
+      rgba($color-brown-dark, 0.05)
+    );
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border-radius: 4rem;
+  }
 }
-
