--- a/src/CoffeeShop/containers/CoffeeShop/CoffeeShop.scss
+++ b/src/CoffeeShop/containers/CoffeeShop/CoffeeShop.scss
@@ -2,7 +2,7 @@
 @import "../../../sass/variables";
 
 .shoppingItems {
-  margin-top: 5rem;
+  margin: 5rem 3rem 0rem 3rem;
 
   &__allItems {
     background-image: linear-gradient(
