--- a/src/CoffeeShop/components/Footer/Footer.scss
+++ b/src/CoffeeShop/components/Footer/Footer.scss
@@ -8,7 +8,7 @@
     rgba($color-brown-dark, 0.7)
   );
   padding: 2.5rem;
-  margin-top: 4rem;
+  margin: 4rem 3rem 3rem 3rem;
   border-radius: 0.6rem;
 
   &__info {
