--- a/src/CoffeeShop/components/Header/Header.scss
+++ b/src/CoffeeShop/components/Header/Header.scss
@@ -2,6 +2,7 @@
 @import "../../../sass/typography";
 
 .header {
+  margin: 6rem 3rem 0rem 3rem;
   height: 90vh;
   color: $color-white;
   background-image: linear-gradient(
