--- a/src/index.scss
+++ b/src/index.scss
@@ -1,43 +1,23 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html{
-  //this defines what 1rem is
-font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
 
 body {
- position: absolute;
- top: 4rem;
- // border: 10px solid orchid;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
-
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 10px;
   line-height: 1.7;
-  color: #777;
-  padding: 15px 30px 30px 30px;
-
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-@media(max-width: 600px){
-    body{
-      padding: 0;
-    }
-  }
-
-
